about spacing fix

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,6 +4,7 @@
   z-index: 10;
   margin-left: auto;
   margin-right: auto;
+  height: 570px;
   /* margin-bottom: 20px; */
 }
 
